--- a/core/scss/components/_br-variables.scss
+++ b/core/scss/components/_br-variables.scss
@@ -1,5 +1,4 @@
 // Variables
-$br-dark: false !default;
 $br-heading-font-weight: 700 !default;
 
 $br-background: #FFF !default;
